Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -78,19 +78,18 @@
         </div>
     </section>
     <section id="webdev">
-        <div class="row">
+        <div class="row bounceInDown">
             <div class="col-xs-12 col-sm-4">
-                <li class="wow bounceInDown">
                     <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
-                </li>
             </div>
             <div class="col-xs-12 col-sm-8">
                 <div class="wow bounceInLeft">
                     <h3>Desenvolvimento Web</h3>
-                    <div class="content"></div>
-                    <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu um pacote
-                        de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao invés de semanas
-                        como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
+                    <div class="content">
+                        <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu um pacote
+                            de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao invés de semanas
+                            como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
+                    </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12" style="background-color: white;">
