Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -78,9 +78,9 @@
         </div>
     </section>
     <section id="webdev">
-        <div class="row bounceInDown">
+        <div class="row wow bounceInDown" data-wow-delay="1.0s">
             <div class="col-xs-12 col-sm-4">
-                    <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
+                <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
             </div>
             <div class="col-xs-12 col-sm-8">
                 <div class="wow bounceInLeft">
