Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -78,12 +78,12 @@
         </div>
     </section>
     <section id="webdev">
-        <div class="row wow bounceInDown" data-wow-delay="1.0s">
+        <div class="row wow slideInDown" data-wow-delay="1.0s">
             <div class="col-xs-12 col-sm-4">
                 <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
             </div>
             <div class="col-xs-12 col-sm-8">
-                <div class="wow bounceInLeft">
+                <div class="wow slideInLeft">
                     <h3>Desenvolvimento Web</h3>
                     <div class="content">
                         <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu um pacote
