Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -78,43 +78,44 @@
         </div>
     </section>
     <section id="webdev">
-        <div class="row wow slideInDown" data-wow-delay="1.0s">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
-            </div>
-            <div class="col-xs-12 col-sm-8">
-                <div class="wow slideInLeft">
-                    <h3>Desenvolvimento Web</h3>
-                    <div class="content">
-                        <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu um pacote
-                            de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao invés de semanas
-                            como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
+        <div class="row">
+            <div class="wow slideInDown" data-wow-delay="1.0s">
+                <div class="col-xs-12 col-sm-4">
+                    <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
+                </div>
+                <div class="col-xs-12 col-sm-8">
+                    <div class="wow slideInLeft" data-wow-delay="2.0s">
+                        <h3>Desenvolvimento Web</h3>
+                        <div class="content">
+                            <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu
+                                um pacote de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao
+                                invés de semanas como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12" style="background-color: white;">
+                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                        <li class="wow bounceInUp" data-wow-delay="0.5s">
+                            <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
+                        </li>
+                    </div>
+                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                        <li class="wow bounceInUp" data-wow-delay="1.0s">
+                            <a href="#"><img src="/img/techs/bootstrap.png" alt="" class="img-responsive"></a>
+                        </li>
+                    </div>
+                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                        <li class="wow bounceInUp" data-wow-delay="1.5s">
+                            <a href="#"><img src="/img/techs/heroku.png" alt="" class="img-responsive"></a>
+                        </li>
+                    </div>
+                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                        <li class="wow bounceInUp" data-wow-delay="2.0s">
+                            <a href="#"><img src="/img/techs/usebasin.png" alt="" class="img-responsive"></a>
+                        </li>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12" style="background-color: white;">
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="0.5s">
-                        <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
-                    </li>
-                </div>
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="1.0s">
-                        <a href="#"><img src="/img/techs/bootstrap.png" alt="" class="img-responsive"></a>
-                    </li>
-                </div>
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="1.5s">
-                        <a href="#"><img src="/img/techs/heroku.png" alt="" class="img-responsive"></a>
-                    </li>
-                </div>
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="2.0s">
-                        <a href="#"><img src="/img/techs/usebasin.png" alt="" class="img-responsive"></a>
-                    </li>
-                </div>
-            </div>
-        </div>
     </section>
 
     <!-- Contact -->
