Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -7,11 +7,11 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- css -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,300,700,800" rel="stylesheet" media="screen">
+    <divnk href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,300,700,800" rel="stylesheet" media="screen">
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="../css/style.css" rel="stylesheet" media="screen">
-    <link href="../color/default.css" rel="stylesheet" media="screen">
+        <divnk href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+            <divnk href="../css/style.css" rel="stylesheet" media="screen">
+                <divnk href="../color/default.css" rel="stylesheet" media="screen">
 
 </head>
 
@@ -47,12 +47,12 @@
             </div>
             <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="current"><a href="#intro">Home</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <!--<li><a href="#portfolio">Clientes</a></li>-->
-                    <!--<li><a href="#team">Time</a></li>-->
-                    <li><a href="#contact">Contato</a></li>
+                    <div class="current"><a href="#intro">Home</a></div>
+                    <div><a href="#about">Sobre</a></div>
+                    <div><a href="#services">Serviços</a></div>
+                    <!--<div><a href="#portfodivo">Cdiventes</a></div>-->
+                    <!--<div><a href="#team">Time</a></div>-->
+                    <div><a href="#contact">Contato</a></div>
                 </ul>
             </div>
         </div>
@@ -61,9 +61,9 @@
     <!-- intro -->
     <section id="intro">
         <div class="intro-container">
-            <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
-                <div class="carousel-inner" role="listbox">
-                    <!-- Slide 1 -->
+            <div id="introCarousel" class="carousel sdivde carousel-fade" data-ride="carousel">
+                <div class="carousel-inner" role="divstbox">
+                    <!-- Sdivde 1 -->
                     <div class="item active">
                         <div class="carousel-background"><img src="/img/intro/webdev_intro.jpg" alt=""></div>
                         <div class="carousel-container">
@@ -79,41 +79,41 @@
     </section>
     <section id="webdev">
         <div class="row">
-            <div class="wow slideInDown" data-wow-delay="1.0s">
+            <div class="wow sdivdeInDown" data-wow-delay="1.0s">
                 <div class="col-xs-12 col-sm-4">
                     <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
                 </div>
                 <div class="col-xs-12 col-sm-8">
-                    <div class="wow slideInLeft" data-wow-delay="2.0s">
+                    <div class="wow sdivdeInLeft" data-wow-delay="2.0s">
                         <h3>Desenvolvimento Web</h3>
                         <div class="content">
-                            <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu
+                            <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na readivdade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu
                                 um pacote de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao
-                                invés de semanas como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
+                                invés de semanas como de costume, fazendo a sua presença na web ser uma readivdade instantânea.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12" style="background-color: white;">
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="0.5s">
+                    <div class="wow bounceInUp" data-wow-delay="0.5s">
                         <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="1.0s">
+                    <div class="wow bounceInUp" data-wow-delay="1.0s">
                         <a href="#"><img src="/img/techs/bootstrap.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="1.5s">
+                    <div class="wow bounceInUp" data-wow-delay="1.5s">
                         <a href="#"><img src="/img/techs/heroku.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="2.0s">
+                    <div class="wow bounceInUp" data-wow-delay="2.0s">
                         <a href="#"><img src="/img/techs/usebasin.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
                         <h2>CONTATO</h2>
-                        <div class="heading-line"></div>
+                        <div class="heading-divne"></div>
                         <p>Se você quer saber o que mais a gente pode fazer por você, manda um oi! Estamos sempre apostos. </p>
                     </div>
                 </div>
@@ -141,28 +141,28 @@
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" />
-                                <div class="validation"></div>
+                                <div class="vadivdation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" />
-                                <div class="validation"></div>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email vádivdo" />
+                                <div class="vadivdation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" />
-                                <div class="validation"></div>
+                                <div class="vadivdation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
                                 <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem"></textarea>
-                                <div class="validation"></div>
+                                <div class="vadivdation"></div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -215,20 +215,20 @@
                 <div class="col-md-12">
                     <h5>Claro que a gente tem facebook!</h5>
                     <ul class="social-network">
-                        <li>
+                        <div>
                             <a href="https://www.facebook.com/SAS-442750003221060">
                                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                                 </span></a>
-                        </li>
-                        <!-- <li>
+                        </div>
+                        <!-- <div>
                             <a href="#">
                                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
                 </span></a>
-                        </li>-->
+                        </div>-->
                     </ul>
                 </div>
             </div>
