--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -94,11 +94,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <div class="col-xs-12 col-sm-12" style="background-color: white;">
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="0.5s">
+                    <div class="wow bounceInUp" data-wow-delay="0.5s">
                         <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
                     <li class="wow bounceInUp" data-wow-delay="1.0s">
