--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -103,19 +103,19 @@
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="1.0s">
+                    <div class="wow bounceInUp" data-wow-delay="1.0s">
                         <a href="#"><img src="/img/techs/bootstrap.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="1.5s">
+                    <div class="wow bounceInUp" data-wow-delay="1.5s">
                         <a href="#"><img src="/img/techs/heroku.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
                 <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <li class="wow bounceInUp" data-wow-delay="2.0s">
+                    <div class="wow bounceInUp" data-wow-delay="2.0s">
                         <a href="#"><img src="/img/techs/usebasin.png" alt="" class="img-responsive"></a>
-                    </li>
+                    </div>
                 </div>
             </div>
         </div>
