--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -77,44 +77,44 @@
             </div>
         </div>
     </section>
-    <section id="webdev">
-        <div class="row">
-            <div class="wow slideInDown" data-wow-delay="1.0s">
-                <div class="col-xs-12 col-sm-4">
-                    <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
+    <section id="webdev" class="home-section bg-gray>
+        <div class=" row ">
+            <div class="wow slideInDown " data-wow-delay="1.0s ">
+                <div class="col-xs-12 col-sm-4 ">
+                    <a href="# "><img src="/img/pages/webdev_1.jpg " alt=" " class="img-responsive "></a>
                 </div>
-                <div class="col-xs-12 col-sm-8">
-                    <div class="wow slideInLeft" data-wow-delay="2.0s">
+                <div class="col-xs-12 col-sm-8 ">
+                    <div class="wow slideInLeft " data-wow-delay="2.0s ">
                         <h3>Desenvolvimento Web</h3>
-                        <div class="content">
+                        <div class="content ">
                             <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu
-                                um pacote de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao
+                                um pacote de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível ") um site fica pronto em questão de horas ao
                                 invés de semanas como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12" style="background-color: white;">
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <div class="wow bounceInUp" data-wow-delay="0.5s">
-                        <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
+        <div class="row ">
+            <div class="col-xs-12 col-sm-12 " style="background-color: white; ">
+                <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
+                    <div class="wow bounceInUp " data-wow-delay="0.5s ">
+                        <a href="# "><img src="/img/techs/github.png " alt=" " class="img-responsive "></a>
                     </div>
                 </div>
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <div class="wow bounceInUp" data-wow-delay="1.0s">
-                        <a href="#"><img src="/img/techs/bootstrap.png" alt="" class="img-responsive"></a>
+                <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
+                    <div class="wow bounceInUp " data-wow-delay="1.0s ">
+                        <a href="# "><img src="/img/techs/bootstrap.png " alt=" " class="img-responsive "></a>
                     </div>
                 </div>
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <div class="wow bounceInUp" data-wow-delay="1.5s">
-                        <a href="#"><img src="/img/techs/heroku.png" alt="" class="img-responsive"></a>
+                <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
+                    <div class="wow bounceInUp " data-wow-delay="1.5s ">
+                        <a href="# "><img src="/img/techs/heroku.png " alt=" " class="img-responsive "></a>
                     </div>
                 </div>
-                <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                    <div class="wow bounceInUp" data-wow-delay="2.0s">
-                        <a href="#"><img src="/img/techs/usebasin.png" alt="" class="img-responsive"></a>
+                <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
+                    <div class="wow bounceInUp " data-wow-delay="2.0s ">
+                        <a href="# "><img src="/img/techs/usebasin.png " alt=" " class="img-responsive "></a>
                     </div>
                 </div>
             </div>
@@ -122,54 +122,54 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="home-section bg-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-offset-2 col-md-8">
-                    <div class="section-heading">
+    <section id="contact " class="home-section bg-dark ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md-offset-2 col-md-8 ">
+                    <div class="section-heading ">
                         <h2>CONTATO</h2>
-                        <div class="heading-line"></div>
+                        <div class="heading-line "></div>
                         <p>Se você quer saber o que mais a gente pode fazer por você, manda um oi! Estamos sempre apostos. </p>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-offset-2 col-md-8">
-                    <div id="sendmessage">Sua mensagem foi enviada! Entraremos em contato em até 12h.</div>
-                    <div id="errormessage">Vixi! Alguma coisa deu errado!</div>
+            <div class="row ">
+                <div class="col-md-offset-2 col-md-8 ">
+                    <div id="sendmessage ">Sua mensagem foi enviada! Entraremos em contato em até 12h.</div>
+                    <div id="errormessage ">Vixi! Alguma coisa deu errado!</div>
 
-                    <form action="https://usebasin.com/f/a79dd3893426" method="post" class="form-horizontal contactForm" role="form">
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" />
-                                <div class="validation"></div>
+                    <form action="https://usebasin.com/f/a79dd3893426 " method="post " class="form-horizontal contactForm " role="form ">
+                        <div class="col-md-offset-2 col-md-8 ">
+                            <div class="form-group ">
+                                <input type="text " name="name " class="form-control " id="name " placeholder="Seu nome " data-rule="minlen:4 " data-msg="Por favor, no mínimo 4 letras " />
+                                <div class="validation "></div>
                             </div>
                         </div>
 
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" />
-                                <div class="validation"></div>
+                        <div class="col-md-offset-2 col-md-8 ">
+                            <div class="form-group ">
+                                <input type="email " class="form-control " name="email " id="email " placeholder="Seu e-mail " data-rule="email " data-msg="Este não parece um email válido " />
+                                <div class="validation "></div>
                             </div>
                         </div>
 
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" />
-                                <div class="validation"></div>
+                        <div class="col-md-offset-2 col-md-8 ">
+                            <div class="form-group ">
+                                <input type="text " class="form-control " name="subject " id="subject " placeholder="Assunto " data-rule="minlen:4 " data-msg="Escreve mais um pouquinho " />
+                                <div class="validation "></div>
                             </div>
                         </div>
 
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem"></textarea>
-                                <div class="validation"></div>
+                        <div class="col-md-offset-2 col-md-8 ">
+                            <div class="form-group ">
+                                <textarea class="form-control " name="message " rows="5 " data-rule="required " data-msg="Vai lá, escreve pra gente! " placeholder="Mensagem "></textarea>
+                                <div class="validation "></div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-8">
-                                <input type="submit" class="btn btn-theme btn-lg btn-block" value="Enviar"></button>
+                        <div class="form-group ">
+                            <div class="col-md-offset-2 col-md-8 ">
+                                <input type="submit " class="btn btn-theme btn-lg btn-block " value="Enviar "></button>
                             </div>
                         </div>
                     </form>
@@ -181,21 +181,21 @@
     </section>
 
     <!-- Bottom widget -->
-    <section id="bottom-widget" class="home-section bg-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="contact-widget wow bounceInLeft">
-                        <i class="fa fa-map-marker fa-4x"></i>
+    <section id="bottom-widget " class="home-section bg-white ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md-4 ">
+                    <div class="contact-widget wow bounceInLeft ">
+                        <i class="fa fa-map-marker fa-4x "></i>
                         <h5>SEDE</h5>
                         <p>
                             Rua Manoel Rosa, 116<br />São José - SC
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="contact-widget wow bounceInUp">
-                        <i class="fa fa-phone fa-4x"></i>
+                <div class="col-md-4 ">
+                    <div class="contact-widget wow bounceInUp ">
+                        <i class="fa fa-phone fa-4x "></i>
                         <h5>NOSSOS TELEFONES</h5>
                         <p>
                             +55 48 998.142.779<br> +55 48 999.676.020
@@ -203,9 +203,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="contact-widget wow bounceInRight">
-                        <i class="fa fa-envelope fa-4x"></i>
+                <div class="col-md-4 ">
+                    <div class="contact-widget wow bounceInRight ">
+                        <i class="fa fa-envelope fa-4x "></i>
                         <h5>NOSSO EMAIL</h5>
                         <p>
                             sas.floripa@gmail.com<br />
@@ -213,22 +213,22 @@
                     </div>
                 </div>
             </div>
-            <div class="row mar-top30">
-                <div class="col-md-12">
+            <div class="row mar-top30 ">
+                <div class="col-md-12 ">
                     <h5>Claro que a gente tem facebook!</h5>
-                    <ul class="social-network">
+                    <ul class="social-network ">
                         <li>
-                            <a href="https://www.facebook.com/SAS-442750003221060">
-                                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                            <a href="https://www.facebook.com/SAS-442750003221060 ">
+                                <span class="fa-stack fa-2x ">
+                  <i class="fa fa-circle fa-stack-2x "></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse "></i>
                                 </span></a>
                         </li>
                         <!-- <li>
-                            <a href="#">
-                                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
+                            <a href="# ">
+                                <span class="fa-stack fa-2x ">
+                  <i class="fa fa-circle fa-stack-2x "></i>
+                  <i class="fa fa-pinterest fa-stack-1x fa-inverse "></i>
                 </span></a>
                         </li>-->
                     </ul>
@@ -239,19 +239,19 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md-12 ">
                     <p>Copyright &copy; 2019</p>
-                    <div class="credits">
-                        Feito por <a href="https://www.sasfln.com.br/" font-face="nasa21regular">.·.S.A.S.·.</a>
+                    <div class="credits ">
+                        Feito por <a href="https://www.sasfln.com.br/ " font-face="nasa21regular ">.·.S.A.S.·.</a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <a href="# " class="back-to-top "><i class="fa fa-chevron-up "></i></a>
 
 </body>
 
