--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </section>
-    <section id="webdev" class="home-section bg-gray>
+    <section id="webdev" style="bg-gray">
         <div class=" row ">
             <div class="wow slideInDown " data-wow-delay="1.0s ">
                 <div class="col-xs-12 col-sm-4 ">
