--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact " class="home-section bg-dark ">
+    <section id="contact " class="home-section bg-white ">
         <div class="container ">
             <div class="row ">
                 <div class="col-md-offset-2 col-md-8 ">
