Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </section>
-    <section id="webdev" style="bg-gray">
+    <section id="webdev-text" style="bg-gray">
         <div class=" row ">
             <div class="wow slideInDown " data-wow-delay="1.0s ">
                 <div class="col-xs-12 col-sm-4 ">
@@ -95,7 +95,9 @@
                 </div>
             </div>
         </div>
-        <div class="row ">
+    </section>
+    <section id="webdev-techs" style="home-section bg-white">
+        <div class="row">
             <div class="col-xs-12 col-sm-12 " style="background-color: white; ">
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="0.5s ">
