--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -96,7 +96,7 @@
             </div>
         </div>
     </section>
-    <section id="webdev-techs" style="home-section bg-white">
+    <section id="webdev-techs" class="home-section bg-white">
         <div class="row">
             <div class="col-xs-12 col-sm-12 " style="background-color: white; ">
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
