Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -81,15 +81,18 @@
         <div class=" row ">
             <div class="wow slideInDown " data-wow-delay="1.0s ">
                 <div class="col-xs-12 col-sm-4 ">
-                    <a href="# "><img src="/img/pages/webdev_1.jpg " alt=" " class="img-responsive "></a>
+                    <a href="#"><img src="/img/pages/webdev_1.jpg" alt=" " class="img-responsive"></a>
                 </div>
                 <div class="col-xs-12 col-sm-8 ">
-                    <div class="wow slideInLeft " data-wow-delay="2.0s ">
+                    <div class="wow slideInLeft" data-wow-delay="2.0s">
                         <h2>Desenvolvimento Web</h2>
-                        <div class="content ">
-                            <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu
-                                um pacote de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível ") um site fica pronto em questão de horas ao
-                                invés de semanas como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
+                        <div class="content">
+                            <p>Um site é a fachada virtual de uma empresa.
+                                <p>Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também <br>e este pensamento está cada vez mais comum.
+                                    <p>Foi pensando nisso que a SAS desenvolveu um pacote de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet.
+                                        <p>Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível ") um site fica pronto<br> em questão de horas ao invés de semanas como de costume<br>fazendo a sua presença na web ser uma realidade instantânea.</p>
+                                        <p>Usando as tecnologias disponíveis de código fonte aberto podemos fazer um site para sua empresa com um investimento inicial bastante reduzido <br>facilitando para o pequeno empreendedor ter sua marca na internet
+                                            <br>sem a necessidade de um alto investimento.
                         </div>
                     </div>
                 </div>
