Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -105,21 +105,25 @@
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="0.5s ">
                         <a href="# "><img src="/img/techs/github.png " alt=" " class="img-responsive "></a>
+                        <p>GitHub é um sistema de versionamento gratuito onde você pode hospedar um projeto. Neste caso, o seu site! E de <b>graça</b></p>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="1.0s ">
                         <a href="# "><img src="/img/techs/bootstrap.png " alt=" " class="img-responsive "></a>
+                        <p>Bootstrap é uma plataforma com a qual é possível desenvolver um site do zero em pouquíssimo tempo!</p>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="1.5s ">
                         <a href="# "><img src="/img/techs/heroku.png " alt=" " class="img-responsive "></a>
+                        <p>Heroku é um serviço de hospedagem de aplicativo e banco de dados gratuito com uma capacidade incrível!</p>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="2.0s ">
                         <a href="# "><img src="/img/techs/usebasin.png " alt=" " class="img-responsive "></a>
+                        <p>Usebasin é um serviço de formulário online que permite a um site receber contatos via formulário sem demoras!</p>
                     </div>
                 </div>
             </div>
