Working on new pages

--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -47,12 +47,12 @@
             </div>
             <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="current"><a href="#intro">Home</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="../index.html#intro">Home</a></li>
+                    <li><a href="../index.html#about">Sobre</a></li>
+                    <li><a href="../index.html#services">Serviços</a></li>
                     <!--<li><a href="#portfolio">Clientes</a></li>-->
                     <!--<li><a href="#team">Time</a></li>-->
-                    <li><a href="#contact">Contato</a></li>
+                    <li><a href="../index.html#contact">Contato</a></li>
                 </ul>
             </div>
         </div>
@@ -136,9 +136,9 @@
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
-                        <h2>CONTATO</h2>
+                        <h2>PRONTO PARA TER<br>SEU PRIMEIRO SITE?</h2>
                         <div class="heading-line"></div>
-                        <p>Se você quer saber o que mais a gente pode fazer por você, manda um oi! Estamos sempre apostos. </p>
+                        <p>Tem uma ideia de site que acha que pode ajudar a sua empresa? Conversa com a gente! </p>
                     </div>
                 </div>
             </div>
