--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -49,10 +49,17 @@
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html#intro">Home</a></li>
                     <li><a href="../index.html#about">Sobre</a></li>
-                    <li><a href="../index.html#services">Serviços</a></li>
-                    <!--<li><a href="#portfolio">Clientes</a></li>-->
-                    <!--<li><a href="#team">Time</a></li>-->
-                    <li><a href="../index.html#contact">Contato</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="../pages/webdev.html">Serviços</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Criação de Site</a></li>
+                            <li><a href="#">Criação de Marca</a></li>
+                            <li><a href="#">Suporte Técnico</a></li>
+                            <li><a href="#">Redes e Servidores</a></li>
+                            <!--<li><a href="#portfolio">Clientes</a></li>-->
+                            <!--<li><a href="#team">Time</a></li>-->
+                        </ul>
+                    </li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </div>
         </div>
