Working on new pages

--- a/index.html
+++ b/index.html
@@ -53,16 +53,23 @@
         </button>
 
                 <!-- Logo text or image -->
-                <a class="navbar-brand" href="index.html">SAS</a>
+                <a class="navbar-brand" href="/index.html">SAS</a>
 
             </div>
             <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="current"><a href="#intro">Home</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <!--<li><a href="#portfolio">Clientes</a></li>-->
-                    <!--<li><a href="#team">Time</a></li>-->
+                    <li><a href="/index.html#intro">Home</a></li>
+                    <li><a href="/index.html#about">Sobre</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/pages/webdev.html">Serviços</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/pages/webdev.html">Criação de Site</a></li>
+                            <li><a href="/pages/branding.html">Criação de Marca</a></li>
+                            <li><a href="/pages/techsupport.html">Suporte Técnico</a></li>
+                            <li><a href="/pages/networking.html">Redes e Servidores</a></li>
+                            <!--<li><a href="#portifolio">Clientes</a></li>-->
+                            <!--<li><a href="#team">Time</a></li>-->
+                        </ul>
+                    </li>
                     <li><a href="#contact">Contato</a></li>
                 </ul>
             </div>
