--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -42,20 +42,20 @@
         </button>
 
                 <!-- Logo text or image -->
-                <a class="navbar-brand" href="../index.html">SAS</a>
+                <a class="navbar-brand" href="/index.html">SAS</a>
 
             </div>
             <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../index.html#intro">Home</a></li>
-                    <li><a href="../index.html#about">Sobre</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="../pages/webdev.html">Serviços</a>
+                    <li><a href="/index.html#intro">Home</a></li>
+                    <li><a href="/index.html#about">Sobre</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/pages/webdev.html">Serviços</a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Criação de Site</a></li>
-                            <li><a href="#">Criação de Marca</a></li>
-                            <li><a href="#">Suporte Técnico</a></li>
-                            <li><a href="#">Redes e Servidores</a></li>
-                            <!--<li><a href="#portfolio">Clientes</a></li>-->
+                            <li><a href="/pages/webdev.html">Criação de Site</a></li>
+                            <li><a href="/pages/branding.html">Criação de Marca</a></li>
+                            <li><a href="/pages/techsupport.html">Suporte Técnico</a></li>
+                            <li><a href="/pages/networking.html">Redes e Servidores</a></li>
+                            <!--<li><a href="#portifolio">Clientes</a></li>-->
                             <!--<li><a href="#team">Time</a></li>-->
                         </ul>
                     </li>
@@ -111,25 +111,25 @@
             <div class="col-xs-12 col-sm-12 " style="background-color: white; ">
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="0.5s ">
-                        <a href="# "><img src="/img/techs/github.png " alt=" " class="img-responsive "></a>
+                        <a href="https://github.com"><img src="/img/techs/github.png " alt=" " class="img-responsive "></a>
                         <p>GitHub é um sistema de versionamento gratuito onde você pode hospedar um projeto. Neste caso, o seu site! E de <b>graça</b></p>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="1.0s ">
-                        <a href="# "><img src="/img/techs/bootstrap.png " alt=" " class="img-responsive "></a>
+                        <a href="https://getbootstrap.com"><img src="/img/techs/bootstrap.png " alt=" " class="img-responsive "></a>
                         <p>Bootstrap é uma plataforma com a qual é possível desenvolver um site do zero em pouquíssimo tempo!</p>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="1.5s ">
-                        <a href="# "><img src="/img/techs/heroku.png " alt=" " class="img-responsive "></a>
+                        <a href="https://www.heroku.com"><img src="/img/techs/heroku.png " alt=" " class="img-responsive "></a>
                         <p>Heroku é um serviço de hospedagem de aplicativo e banco de dados gratuito com uma capacidade incrível!</p>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 " style="background-color: white; ">
                     <div class="wow bounceInUp " data-wow-delay="2.0s ">
-                        <a href="# "><img src="/img/techs/usebasin.png " alt=" " class="img-responsive "></a>
+                        <a href="https://usebasin.com"><img src="/img/techs/usebasin.png " alt=" " class="img-responsive "></a>
                         <p>Usebasin é um serviço de formulário online que permite a um site receber contatos via formulário sem demoras!</p>
                     </div>
                 </div>
