--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     <!-- Slide 1 -->
                     <div class="item active">
-                        <div class="carousel-background"><img src="img/intro/1.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro/home/1.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">.·. S.A.S .·.</h2>
@@ -97,7 +97,7 @@
 
                     <!-- Slide 2 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/2.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro/home/2.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">SUPORTE TÉCNICO</span>
@@ -110,7 +110,7 @@
 
                     <!-- Slide 3 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/3.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro/home/3.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">ESTRUTURA DE TI</span>
@@ -123,7 +123,7 @@
 
                     <!-- Slide 4 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/4.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro/home/4.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</span>
@@ -136,7 +136,7 @@
 
                     <!-- Slide 5 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/5.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro/home/5.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">SERVIDORES</span>
@@ -148,7 +148,7 @@
                     </div>
                     <!-- Slide 6 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/6.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro/home/6.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">REDES</span>
