--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -72,7 +72,7 @@
                 <div class="carousel-inner" role="listbox">
                     <!-- Slide 1 -->
                     <div class="item active">
-                        <div class="carousel-background"><img src="/img/intro/webdev_intro.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="/img/intro/webdev/webdev_intro.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</h2>
