Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -72,11 +72,51 @@
                 <div class="carousel-inner" role="listbox">
                     <!-- Slide 1 -->
                     <div class="item active">
-                        <div class="carousel-background"><img src="/img/intro/branding_intro.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro/branding/1.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</h2>
+                                <h2 class="animated fadeInDown">.·. S.A.S .·.</h2>
+                                <p class="animated fadeInUp">soluções de TI para pequenas empresas.</p>
+                                <a href="#about" class="btn-get-started animated fadeInUp">Nossa Missão</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 2 -->
+                    <div class="item">
+                        <div class="carousel-background"><img src="img/intro/branding/2.jpg" alt=""></div>
+                        <div class="carousel-container">
+                            <div class="carousel-content">
+                                <h2 class="animated fadeInDown">SUPORTE TÉCNICO</span>
+                                </h2>
+                                <p class="animated fadeInUp">cuidando de tudo para você prosperar</p>
+                                <a href="#services" class="btn-get-started animated fadeInUp">saiba como</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 3 -->
+                    <div class="item">
+                        <div class="carousel-background"><img src="img/intro/branding/3.jpg" alt=""></div>
+                        <div class="carousel-container">
+                            <div class="carousel-content">
+                                <h2 class="animated fadeInDown">ESTRUTURA DE TI</span>
+                                </h2>
+                                <p class="animated fadeInUp">tudo que você precisa para começar</p>
+                                <a href="#services" class="btn-get-started animated fadeInUp">e para continuar também</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 4 -->
+                    <div class="item">
+                        <div class="carousel-background"><img src="img/intro/branding/2.jpg" alt=""></div>
+                        <div class="carousel-container">
+                            <div class="carousel-content">
+                                <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</span>
+                                </h2>
                                 <p class="animated fadeInUp">sua empresa na internet</p>
+                                <a href="#services" class="btn-get-started animated fadeInUp">precisa de um site? a gente faz</a>
                             </div>
                         </div>
                     </div>
