Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -72,7 +72,7 @@
                 <div class="carousel-inner" role="listbox">
                     <!-- Slide 1 -->
                     <div class="item active">
-                        <div class="carousel-background"><img src="img/intro/branding/1.png" alt=""></div>
+                        <div class="carousel-background"><img src="/img/intro/branding/1.png" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">.·. S.A.S .·.</h2>
@@ -84,7 +84,7 @@
 
                     <!-- Slide 2 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/branding/2.png" alt=""></div>
+                        <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">SUPORTE TÉCNICO</span>
@@ -97,7 +97,7 @@
 
                     <!-- Slide 3 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/branding/3.png" alt=""></div>
+                        <div class="carousel-background"><img src="/img/intro/branding/3.png" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">ESTRUTURA DE TI</span>
@@ -110,7 +110,7 @@
 
                     <!-- Slide 4 -->
                     <div class="item">
-                        <div class="carousel-background"><img src="img/intro/branding/2.png" alt=""></div>
+                        <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</span>
