--- a/pages/branding.html
+++ b/pages/branding.html
@@ -65,166 +65,180 @@
         </div>
     </nav>
 
-    <!-- intro -->
-    <section id="intro">
-        <div class="intro-container">
-            <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
-                <div class="carousel-inner" role="listbox">
-                    <!-- Slide 1 -->
-                    <div class="item active">
-                        <div class="carousel-background"><img src="/img/intro/branding/1.png" alt=""></div>
-                    </div>
-
-                    <!-- Slide 2 -->
-                    <div class="item">
-                        <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
-                    </div>
-
-                    <!-- Slide 3 -->
-                    <div class="item">
-                        <div class="carousel-background"><img src="/img/intro/branding/3.png" alt=""></div>
-                    </div>
-
-                    <!-- Slide 4 -->
-                    <div class="item">
-                        <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="home-section bg-gray">
+    <!-- About -->
+    <section id="about" class="home-section bg-white">
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
-                        <h2>PRONTO PARA TER<br>SEU PRIMEIRO SITE?</h2>
+                        <h2>SOBRE A SAS</h2>
                         <div class="heading-line"></div>
-                        <p>Tem uma ideia de site que acha que pode ajudar a sua empresa? Conversa com a gente! </p>
+                        <p>Atuamos no mercado de TI há 4 anos cuidando da pequena empresa e do MEI, ajudando a crescer.</p>
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-md-offset-2 col-md-8">
-                    <div id="sendmessage">Sua mensagem foi enviada! Entraremos em contato em até 12h.</div>
-                    <div id="errormessage">Vixi! Alguma coisa deu errado!</div>
-
-                    <form action="https://usebasin.com/f/a79dd3893426" method="post" class="form-horizontal contactForm" role="form">
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" />
-                                <div class="validation"></div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" />
-                                <div class="validation"></div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" />
-                                <div class="validation"></div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-offset-2 col-md-8">
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem"></textarea>
-                                <div class="validation"></div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-8">
-                                <input type="submit" class="btn btn-theme btn-lg btn-block" value="Enviar"></button>
-                            </div>
-                        </div>
-                    </form>
-
-                </div>
-            </div>
-
         </div>
-    </section>
 
-    <!-- Bottom widget -->
-    <section id="bottom-widget" class="home-section bg-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="contact-widget wow bounceInLeft">
-                        <i class="fa fa-map-marker fa-4x"></i>
-                        <h5>SEDE</h5>
-                        <p>
-                            Rua Manoel Rosa, 116<br />São José - SC
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-widget wow bounceInUp">
-                        <i class="fa fa-phone fa-4x"></i>
-                        <h5>NOSSOS TELEFONES</h5>
-                        <p>
-                            +55 48 998.142.779<br> +55 48 999.676.020
+        <!-- intro -->
+        <section id="intro">
+            <div class="intro-container">
+                <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <!-- Slide 1 -->
+                        <div class="item active">
+                            <div class="carousel-background"><img src="/img/intro/branding/1.png" alt=""></div>
+                        </div>
 
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-widget wow bounceInRight">
-                        <i class="fa fa-envelope fa-4x"></i>
-                        <h5>NOSSO EMAIL</h5>
-                        <p>
-                            sas.floripa@gmail.com<br />
-                        </p>
+                        <!-- Slide 2 -->
+                        <div class="item">
+                            <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
+                        </div>
+
+                        <!-- Slide 3 -->
+                        <div class="item">
+                            <div class="carousel-background"><img src="/img/intro/branding/3.png" alt=""></div>
+                        </div>
+
+                        <!-- Slide 4 -->
+                        <div class="item">
+                            <div class="carousel-background"><img src="/img/intro/branding/2.png" alt=""></div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row mar-top30">
-                <div class="col-md-12">
-                    <h5>Claro que a gente tem facebook!</h5>
-                    <ul class="social-network">
-                        <li>
-                            <a href="https://www.facebook.com/SAS-442750003221060">
-                                <span class="fa-stack fa-2x">
+        </section>
+
+        <!-- Contact -->
+        <section id="contact" class="home-section bg-gray">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                        <div class="section-heading">
+                            <h2>PRONTO PARA TER<br>SEU PRIMEIRO SITE?</h2>
+                            <div class="heading-line"></div>
+                            <p>Tem uma ideia de site que acha que pode ajudar a sua empresa? Conversa com a gente! </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                        <div id="sendmessage">Sua mensagem foi enviada! Entraremos em contato em até 12h.</div>
+                        <div id="errormessage">Vixi! Alguma coisa deu errado!</div>
+
+                        <form action="https://usebasin.com/f/a79dd3893426" method="post" class="form-horizontal contactForm" role="form">
+                            <div class="col-md-offset-2 col-md-8">
+                                <div class="form-group">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" />
+                                    <div class="validation"></div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-offset-2 col-md-8">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" />
+                                    <div class="validation"></div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-offset-2 col-md-8">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" />
+                                    <div class="validation"></div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-offset-2 col-md-8">
+                                <div class="form-group">
+                                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem"></textarea>
+                                    <div class="validation"></div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-8">
+                                    <input type="submit" class="btn btn-theme btn-lg btn-block" value="Enviar"></button>
+                                </div>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Bottom widget -->
+        <section id="bottom-widget" class="home-section bg-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="contact-widget wow bounceInLeft">
+                            <i class="fa fa-map-marker fa-4x"></i>
+                            <h5>SEDE</h5>
+                            <p>
+                                Rua Manoel Rosa, 116<br />São José - SC
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="contact-widget wow bounceInUp">
+                            <i class="fa fa-phone fa-4x"></i>
+                            <h5>NOSSOS TELEFONES</h5>
+                            <p>
+                                +55 48 998.142.779<br> +55 48 999.676.020
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="contact-widget wow bounceInRight">
+                            <i class="fa fa-envelope fa-4x"></i>
+                            <h5>NOSSO EMAIL</h5>
+                            <p>
+                                sas.floripa@gmail.com<br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mar-top30">
+                    <div class="col-md-12">
+                        <h5>Claro que a gente tem facebook!</h5>
+                        <ul class="social-network">
+                            <li>
+                                <a href="https://www.facebook.com/SAS-442750003221060">
+                                    <span class="fa-stack fa-2x">
                           <i class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                                         </span></a>
-                        </li>
-                        <!-- <li>
+                            </li>
+                            <!-- <li>
                                     <a href="#">
                                         <span class="fa-stack fa-2x">
                           <i class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
                         </span></a>
                                 </li>-->
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <p>Copyright &copy; 2019</p>
-                    <div class="credits">
-                        Feito por <a href="https://www.sasfln.com.br/" font-face="nasa21regular">.·.S.A.S.·.</a>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </section>
 
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>Copyright &copy; 2019</p>
+                        <div class="credits">
+                            Feito por <a href="https://www.sasfln.com.br/" font-face="nasa21regular">.·.S.A.S.·.</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
 </body>
 
