Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -95,14 +95,14 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="home-section bg-white">
+    <section id="branding" class="home-section" style="background-color: #00001a">
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
-                        <h2>SOBRE A SAS</h2>
+                        <h2>CRIAÇÃO DE MARCA</h2>
                         <div class="heading-line"></div>
-                        <p>Atuamos no mercado de TI há 4 anos cuidando da pequena empresa e do MEI, ajudando a crescer.</p>
+                        <p>Sua empresa começou assim, na cara e na coragem? Vamos oficializar as coisas!</p>
                     </div>
                 </div>
             </div>
