Working on new pages

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -108,6 +108,21 @@
             </div>
         </div>
 
+        <!-- Services -->
+        <section id="services" class="home-section" style="background-color: #00001a">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                        <div class="section-heading">
+                            <h2>IDENTIDADE DE MARCA</h2>
+                            <div class="heading-line"></div>
+                            <p>a identidade de uma marca é como ela se apresenta; suas cores, simbologia, missão e principalmente a logomarca.<br> Tendo uma marca criada da forma correta, seus clientes vão reconhecer você em todo lugar!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact -->
         <section id="contact" class="home-section bg-gray">
             <div class="container">
